[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "portfolio"
version = "1.2.0"
description = "A PortFolio website build with the CMS Wagtail"
authors = ["Yannick Chabbert <yannick.chabbert.it@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^6.1.2"
django-ipware = "^7.0.1"
pyyaml = "^6.0"
django-compressor = "^4.4"
psycopg = "^3.1.9"
redis = "^5.0.1"
hiredis = "^2.2.3"

[tool.poetry.group.test.dependencies]
tblib = "^3.0.0"
tox = "^4.15.1"
coverage = {extras = ["toml"], version = "^7.5.3"}

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.1.0"
pre-commit = "^3.7.1"
pylama = {extras = ["toml"], version = "^8.4.1"}
black = "^24.4.2"
djhtml = "^3.0.6"
isort = "^5.12.0"

[tool.poetry.group.prod.dependencies]
psycopg = {extras = ["c"], version = "^3.1.16"}
gunicorn = "^22.0.0"

[tool.black]
line-length = 119
target-version = ["py310"]
extend-exclude = "/migrations/"

[tool.pylama]
skip = "*/.tox/*,*/migrations/*,*/settings/*,*/static/*"
linters = "pycodestyle,pyflakes,mccabe"

[tool.pylama.linter.pycodestyle]
max_line_length = 119

[tool.pylama.linter.mccabe]
complexity = 15

[tool.isort]
profile = "black"
skip = "migrations"
sections = "FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_django = "django"
known_wagtail = "wagtail"
known_first_party = "portfolio"

[tool.coverage.run]
source = [ "portfolio" ]
branch = true
omit = [
    "manage.py",
    "portfolio/wsgi.py",
    "portfolio/settings/**",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "def __str__",
    "def __repr__",
]
